updated style css with a comment

--- a/redhorn/angular.json
+++ b/redhorn/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "redhorn": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "redhorn"
+    }
+  },
+  "defaultProject": "redhorn",
+  "cli": {
+    "analytics": false
+  }
 }
