--- a/redhorn/angular.json
+++ b/redhorn/angular.json
@@ -121,6 +121,10 @@
               "devServerTarget": "redhorn:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
