--- a/redhorn/package.json
+++ b/redhorn/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.4.0",
     "intersection-observer": "^0.10.0",
+    "ng-click-outside": "^6.0.0",
     "ng-in-viewport": "^6.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
